fix(MainActivity): four independent bug fixes EGL context loss: - Call ExternalOESShaderProgram.getInstance().resetForContextLoss() from   onSurfaceCreated() so the video OES shader recompiles correctly after   EGL context loss (background + low memory). Only StoryboardBatchShader   was reset before; the video shader was silently left with a stale ID. logFlushFuture leak: - Cancel the previous ScheduledFuture before scheduling a new one in   onResume(). Without this, every resume stacks another uncancellable   periodic task that runs until the executor shuts down. Dead code / logic: - Fix initPreferences(): both branches wrote lowtextures=false; low-density   (ldpi/mdpi) devices now correctly receive lowtextures=true. - Remove unreachable second ACTION_DOWN guard in onKeyDown() — the method   already returns early if action != ACTION_DOWN on line 847. Security: - Replace Runtime.exec(String) with exec(String[]) for the logcat launch.   The single-string form splits on whitespace, which silently breaks on   external storage paths that contain spaces.